--- a/integer-sequence-learning/serious approach 1-inspecting.ipynb
+++ b/integer-sequence-learning/serious approach 1-inspecting.ipynb
@@ -1245,13 +1245,6 @@
    "source": [
     "def generateExtraFeatures(mX):\n",
     "    n = mX.shape[1]\n",
-    "    #for i in range(1, n-1):\n",
-    "    #    mX = mX\n",
-    "    #    mX = np.concatenate((mX, mX[:,i:i+1]**2), axis=1) # Xn^2\n",
-    "    #    mX = np.concatenate((mX, np.cos(mX[:,i:i+1])), axis=1) # cos\n",
-    "    #    mX = np.concatenate((mX, np.cos(mX[:,i:i+1])), axis=1) # sin\n",
-    "    #    mX = np.concatenate((mX, np.exp(mX[:,i:i+1])), axis=1) # exp\n",
-    "    #    mX = np.concatenate((mX, np.log(mX[:,i:i+1])), axis=1) # exp\n",
     "    if (n > 11):\n",
     "        return mX\n",
     "    for i in range(1, n-2):\n",
@@ -1363,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1373,11 +1366,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "414 / 2000 matches; zeros = 0, accuracy = 0.207000 \n",
-      "861 / 4000 matches; zeros = 0, accuracy = 0.215250 \n",
-      "1295 / 6000 matches; zeros = 0, accuracy = 0.215833 \n",
-      "1739 / 8000 matches; zeros = 0, accuracy = 0.217375 \n"
+      "started...\n",
+      "0 total matches\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/site-packages/scipy/linalg/basic.py:884: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  warnings.warn(mesg, RuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x108a02748>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1386,46 +1394,63 @@
     "zeros = 0\n",
     "output = []\n",
     "sets = []\n",
+    "\n",
+    "print(\"started...\")\n",
     "#for i in range(len(train)):\n",
-    "for i in range(1,16000):\n",
+    "for i in range(1,2):\n",
     "    seq = train.seq[i].astype(np.longdouble)\n",
     "    \n",
     "    N = int((seq[:-2].shape[0]-2)/2+1)\n",
-    "    bestN = N\n",
-    "    bestPDiff = -1\n",
     "    if N > 16:\n",
     "        N = 16\n",
     "    \n",
-    "    outputToAppend = [int(train.id[i]), 0]\n",
-    "    setToAppend = []\n",
-    "    for n in range(0, N, 1):\n",
+    "    solutions = []\n",
+    "    for n in range(1, 1+N, 1):\n",
     "        plast = seq[-2:-1]\n",
     "        plastpredicted = predictLast(seq[:-2], n)\n",
     "\n",
     "        last = seq[-1:]\n",
     "        lastpredicted = predictLast(seq[:-1], n)\n",
     "\n",
-    "        pdiff = np.abs(plast - plastpredicted)\n",
-    "        if pdiff < bestPDiff or -1 == bestPDiff:\n",
-    "            bestN = n\n",
-    "            bestPDiff = pdiff\n",
-    "            diff = int(last - lastpredicted)\n",
-    "            try:\n",
-    "                outputToAppend = [train.id[i], int(lastpredicted)]\n",
-    "            except OverflowError:\n",
-    "                outputToAppend = [train.id[i], int(seq[-1:])]\n",
-    "            setToAppend = np.concatenate((train.seq[i], [plastpredicted], [lastpredicted]))\n",
-    "        else:\n",
-    "            break\n",
+    "        #try:\n",
+    "        #    iLastPredicted = int(lastpredicted)\n",
+    "        #except OverflowError:\n",
+    "        #    iLastPredicted = int(seq[-2:-1])\n",
     "    \n",
-    "    output.append(outputToAppend)\n",
-    "    sets.append(setToAppend)\n",
+    "        solutions.append({\n",
+    "            \"id\": int(train.id[i]),\n",
+    "            \"n\": n,\n",
+    "            \"N\": N,\n",
+    "            \"iLastPredicted\": np.longdouble(lastpredicted),\n",
+    "            \"pdiff\": np.abs(np.longdouble(plast) - np.longdouble(plastpredicted)),\n",
+    "            \"diff\": np.abs(np.longdouble(last) - np.longdouble(lastpredicted)),\n",
+    "            \"setToAppend\": np.concatenate((train.seq[i], [np.longdouble(plastpredicted)], [np.longdouble(lastpredicted)]))\n",
+    "        });\n",
     "    \n",
-    "    if diff == 0:\n",
+    "    # @TODO accuracy decreased from 0.25 to 0.07 after this refactor \n",
+    "    if N == 0:\n",
+    "        output.append([int(train.id[i]), int(seq[-2:-1])])\n",
     "        matches += 1\n",
-    "    if lastpredicted == 0:\n",
-    "        zeros += 1\n",
-    "    if i>0 and i%2000==0:\n",
+    "    else:\n",
+    "        newSolutions = sorted(solutions, key=lambda k: k['pdiff'])\n",
+    "        chosenSolution = newSolutions[0];\n",
+    "        ## TODO\n",
+    "        #   to chose a solution:\n",
+    "        #   there is no direct correlation between pdiff and diff, so the idea is to find it\n",
+    "        #   maybe triangulating this way: diff = f(pdiff, n)\n",
+    "        \n",
+    "        output.append([chosenSolution[\"id\"], int(chosenSolution[\"iLastPredicted\"])])\n",
+    "        if chosenSolution[\"diff\"] == 0:\n",
+    "            matches += 1\n",
+    "        if chosenSolution[\"iLastPredicted\"] == 0:\n",
+    "            zeros += 1\n",
+    "        sets.append(chosenSolution[\"setToAppend\"])\n",
+    "        \n",
+    "        #display(pd.DataFrame(newSolutions));\n",
+    "        #print(chosenSolution)\n",
+    "        #display(pd.DataFrame(output));\n",
+    "    \n",
+    "    if i>0 and i%1000==0:\n",
     "        print(\"%d / %d matches; zeros = %d, accuracy = %f \" % (matches, i, zeros, float(matches)/float(i)))\n",
     "              \n",
     "print(\"%d total matches\" % matches)\n",
@@ -1444,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1453,62 +1478,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "started...\n",
+      "1000 / 113845 done\n",
       "2000 / 113845 done\n",
+      "3000 / 113845 done\n",
       "4000 / 113845 done\n",
+      "5000 / 113845 done\n",
       "6000 / 113845 done\n",
+      "7000 / 113845 done\n",
       "8000 / 113845 done\n",
+      "9000 / 113845 done\n",
       "10000 / 113845 done\n",
+      "11000 / 113845 done\n",
       "12000 / 113845 done\n",
+      "13000 / 113845 done\n",
       "14000 / 113845 done\n",
+      "15000 / 113845 done\n",
       "16000 / 113845 done\n",
+      "17000 / 113845 done\n",
       "18000 / 113845 done\n",
+      "19000 / 113845 done\n",
       "20000 / 113845 done\n",
+      "21000 / 113845 done\n",
       "22000 / 113845 done\n",
+      "23000 / 113845 done\n",
       "24000 / 113845 done\n",
+      "25000 / 113845 done\n",
       "26000 / 113845 done\n",
+      "27000 / 113845 done\n",
       "28000 / 113845 done\n",
+      "29000 / 113845 done\n",
       "30000 / 113845 done\n",
+      "31000 / 113845 done\n",
       "32000 / 113845 done\n",
+      "33000 / 113845 done\n",
       "34000 / 113845 done\n",
+      "35000 / 113845 done\n",
       "36000 / 113845 done\n",
+      "37000 / 113845 done\n",
       "38000 / 113845 done\n",
+      "39000 / 113845 done\n",
       "40000 / 113845 done\n",
+      "41000 / 113845 done\n",
       "42000 / 113845 done\n",
+      "43000 / 113845 done\n",
       "44000 / 113845 done\n",
+      "45000 / 113845 done\n",
       "46000 / 113845 done\n",
+      "47000 / 113845 done\n",
       "48000 / 113845 done\n",
+      "49000 / 113845 done\n",
       "50000 / 113845 done\n",
+      "51000 / 113845 done\n",
       "52000 / 113845 done\n",
+      "53000 / 113845 done\n",
       "54000 / 113845 done\n",
+      "55000 / 113845 done\n",
       "56000 / 113845 done\n",
+      "57000 / 113845 done\n",
       "58000 / 113845 done\n",
+      "59000 / 113845 done\n",
       "60000 / 113845 done\n",
+      "61000 / 113845 done\n",
       "62000 / 113845 done\n",
+      "63000 / 113845 done\n",
       "64000 / 113845 done\n",
+      "65000 / 113845 done\n",
       "66000 / 113845 done\n",
+      "67000 / 113845 done\n",
       "68000 / 113845 done\n",
+      "69000 / 113845 done\n",
       "70000 / 113845 done\n",
+      "71000 / 113845 done\n",
       "72000 / 113845 done\n",
+      "73000 / 113845 done\n",
       "74000 / 113845 done\n",
+      "75000 / 113845 done\n",
       "76000 / 113845 done\n",
+      "77000 / 113845 done\n",
       "78000 / 113845 done\n",
+      "79000 / 113845 done\n",
       "80000 / 113845 done\n",
+      "81000 / 113845 done\n",
       "82000 / 113845 done\n",
+      "83000 / 113845 done\n",
       "84000 / 113845 done\n",
+      "85000 / 113845 done\n",
       "86000 / 113845 done\n",
+      "87000 / 113845 done\n",
       "88000 / 113845 done\n",
+      "89000 / 113845 done\n",
       "90000 / 113845 done\n",
+      "91000 / 113845 done\n",
       "92000 / 113845 done\n",
+      "93000 / 113845 done\n",
       "94000 / 113845 done\n",
+      "95000 / 113845 done\n",
       "96000 / 113845 done\n",
+      "97000 / 113845 done\n",
       "98000 / 113845 done\n",
+      "99000 / 113845 done\n",
       "100000 / 113845 done\n",
+      "101000 / 113845 done\n",
       "102000 / 113845 done\n",
+      "103000 / 113845 done\n",
       "104000 / 113845 done\n",
+      "105000 / 113845 done\n",
       "106000 / 113845 done\n",
+      "107000 / 113845 done\n",
       "108000 / 113845 done\n",
+      "109000 / 113845 done\n",
       "110000 / 113845 done\n",
+      "111000 / 113845 done\n",
       "112000 / 113845 done\n",
+      "113000 / 113845 done\n",
       "ok\n"
      ]
     }
@@ -1516,40 +1599,61 @@
    "source": [
     "output = []\n",
     "\n",
+    "print(\"started...\")\n",
+    "\n",
     "for i in range(len(test)):\n",
+    "#for i in range(10):\n",
     "    seq = test.seq[i].astype(np.longdouble)\n",
-    "    \n",
-    "    N = int((seq[:-1].shape[0]-2)/2+1)\n",
-    "    bestN = N\n",
-    "    bestPDiff = -1\n",
+    "   \n",
+    "    N = int((seq[:-2].shape[0]-2)/2+1)\n",
     "    if N > 16:\n",
     "        N = 16\n",
     "    \n",
-    "    outputToAppend = [int(test.id[i]), 0]\n",
-    "    for n in range(N, 0, -1):\n",
+    "    solutions = []\n",
+    "    for n in range(1, 1+N, 1):\n",
     "        plast = seq[-1:]\n",
     "        plastpredicted = predictLast(seq[:-1], n)\n",
     "        \n",
     "        lastpredicted = predictLast(seq, n)\n",
     "\n",
-    "        pdiff = np.abs(plast - plastpredicted)\n",
-    "        if pdiff < bestPDiff or -1 == bestPDiff:\n",
-    "            bestN = n\n",
-    "            bestPDiff = pdiff\n",
-    "            try:\n",
-    "                outputToAppend = [int(test.id[i]), int(lastpredicted)]\n",
-    "            except OverflowError:\n",
-    "                outputToAppend = [int(test.id[i]), int(seq[-1:])]\n",
-    "        else:\n",
-    "            break\n",
+    "        #try:\n",
+    "        #    iLastPredicted = int(lastpredicted)\n",
+    "        #except OverflowError:\n",
+    "        #    iLastPredicted = int(seq[-2:-1])\n",
     "    \n",
-    "    output.append(outputToAppend)\n",
+    "        solutions.append({\n",
+    "            \"id\": int(test.id[i]),\n",
+    "            \"n\": n,\n",
+    "            \"N\": N,\n",
+    "            \"iLastPredicted\": np.longdouble(lastpredicted),\n",
+    "            \"pdiff\": np.abs(np.longdouble(plast) - np.longdouble(plastpredicted)),\n",
+    "            #\"diff\": np.abs(np.longdouble(last) - np.longdouble(lastpredicted)),\n",
+    "            \"setToAppend\": np.concatenate((test.seq[i], [np.longdouble(plastpredicted)], [np.longdouble(lastpredicted)]))\n",
+    "        });\n",
+    "    \n",
+    "    # @TODO accuracy decreased from 0.25 to 0.07 after this refactor \n",
+    "    if N == 0:\n",
+    "        output.append([int(test.id[i]), int(seq[-1:])])\n",
+    "        matches += 1\n",
+    "    else:\n",
+    "        newSolutions = sorted(solutions, key=lambda k: k['pdiff'])\n",
+    "        chosenSolution = newSolutions[0];\n",
+    "        output.append([chosenSolution[\"id\"], int(chosenSolution[\"iLastPredicted\"])])\n",
+    "        #if chosenSolution[\"diff\"] == 0:\n",
+    "        #    matches += 1\n",
+    "        #if chosenSolution[\"iLastPredicted\"] == 0:\n",
+    "        #    zeros += 1\n",
+    "        #sets.append(chosenSolution[\"setToAppend\"])\n",
     "        \n",
-    "    if i>0 and i%2000==0:\n",
+    "        #display(pd.DataFrame(newSolutions));\n",
+    "        #print(chosenSolution)\n",
+    "        #display(pd.DataFrame(output));\n",
+    "        \n",
+    "    if i>0 and i%1000==0:\n",
     "        print(\"%d / %d done\" % (i, len(test)))\n",
     "\n",
     "#print(pd.DataFrame(output))\n",
-    "pd.DataFrame(output).to_csv(\"submission14.csv\", header=[\"Id\", \"Last\"], index=False, index_label=False)\n",
+    "pd.DataFrame(output).to_csv(\"submission15.csv\", header=[\"Id\", \"Last\"], index=False, index_label=False)\n",
     "print(\"ok\")"
    ]
   }
