fitting n of ngrams for each case didnt worked that well

--- a/integer-sequence-learning/serious approach 1-inspecting.ipynb
+++ b/integer-sequence-learning/serious approach 1-inspecting.ipynb
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1491,6 +1491,119 @@
      "output_type": "stream",
      "text": [
       "started...\n",
+      "1000 / 113845 done\n",
+      "2000 / 113845 done\n",
+      "3000 / 113845 done\n",
+      "4000 / 113845 done\n",
+      "5000 / 113845 done\n",
+      "6000 / 113845 done\n",
+      "7000 / 113845 done\n",
+      "8000 / 113845 done\n",
+      "9000 / 113845 done\n",
+      "10000 / 113845 done\n",
+      "11000 / 113845 done\n",
+      "12000 / 113845 done\n",
+      "13000 / 113845 done\n",
+      "14000 / 113845 done\n",
+      "15000 / 113845 done\n",
+      "16000 / 113845 done\n",
+      "17000 / 113845 done\n",
+      "18000 / 113845 done\n",
+      "19000 / 113845 done\n",
+      "20000 / 113845 done\n",
+      "21000 / 113845 done\n",
+      "22000 / 113845 done\n",
+      "23000 / 113845 done\n",
+      "24000 / 113845 done\n",
+      "25000 / 113845 done\n",
+      "26000 / 113845 done\n",
+      "27000 / 113845 done\n",
+      "28000 / 113845 done\n",
+      "29000 / 113845 done\n",
+      "30000 / 113845 done\n",
+      "31000 / 113845 done\n",
+      "32000 / 113845 done\n",
+      "33000 / 113845 done\n",
+      "34000 / 113845 done\n",
+      "35000 / 113845 done\n",
+      "36000 / 113845 done\n",
+      "37000 / 113845 done\n",
+      "38000 / 113845 done\n",
+      "39000 / 113845 done\n",
+      "40000 / 113845 done\n",
+      "41000 / 113845 done\n",
+      "42000 / 113845 done\n",
+      "43000 / 113845 done\n",
+      "44000 / 113845 done\n",
+      "45000 / 113845 done\n",
+      "46000 / 113845 done\n",
+      "47000 / 113845 done\n",
+      "48000 / 113845 done\n",
+      "49000 / 113845 done\n",
+      "50000 / 113845 done\n",
+      "51000 / 113845 done\n",
+      "52000 / 113845 done\n",
+      "53000 / 113845 done\n",
+      "54000 / 113845 done\n",
+      "55000 / 113845 done\n",
+      "56000 / 113845 done\n",
+      "57000 / 113845 done\n",
+      "58000 / 113845 done\n",
+      "59000 / 113845 done\n",
+      "60000 / 113845 done\n",
+      "61000 / 113845 done\n",
+      "62000 / 113845 done\n",
+      "63000 / 113845 done\n",
+      "64000 / 113845 done\n",
+      "65000 / 113845 done\n",
+      "66000 / 113845 done\n",
+      "67000 / 113845 done\n",
+      "68000 / 113845 done\n",
+      "69000 / 113845 done\n",
+      "70000 / 113845 done\n",
+      "71000 / 113845 done\n",
+      "72000 / 113845 done\n",
+      "73000 / 113845 done\n",
+      "74000 / 113845 done\n",
+      "75000 / 113845 done\n",
+      "76000 / 113845 done\n",
+      "77000 / 113845 done\n",
+      "78000 / 113845 done\n",
+      "79000 / 113845 done\n",
+      "80000 / 113845 done\n",
+      "81000 / 113845 done\n",
+      "82000 / 113845 done\n",
+      "83000 / 113845 done\n",
+      "84000 / 113845 done\n",
+      "85000 / 113845 done\n",
+      "86000 / 113845 done\n",
+      "87000 / 113845 done\n",
+      "88000 / 113845 done\n",
+      "89000 / 113845 done\n",
+      "90000 / 113845 done\n",
+      "91000 / 113845 done\n",
+      "92000 / 113845 done\n",
+      "93000 / 113845 done\n",
+      "94000 / 113845 done\n",
+      "95000 / 113845 done\n",
+      "96000 / 113845 done\n",
+      "97000 / 113845 done\n",
+      "98000 / 113845 done\n",
+      "99000 / 113845 done\n",
+      "100000 / 113845 done\n",
+      "101000 / 113845 done\n",
+      "102000 / 113845 done\n",
+      "103000 / 113845 done\n",
+      "104000 / 113845 done\n",
+      "105000 / 113845 done\n",
+      "106000 / 113845 done\n",
+      "107000 / 113845 done\n",
+      "108000 / 113845 done\n",
+      "109000 / 113845 done\n",
+      "110000 / 113845 done\n",
+      "111000 / 113845 done\n",
+      "112000 / 113845 done\n",
+      "113000 / 113845 done\n",
       "ok\n"
      ]
     }
